bad/incr_arr_length.example_compiler_output
ERROR
[1mbad/incr_arr_length.lat:4:21: [1;31merror: [0;1mexpression is not assignable[m
	(new int[3]).length++;
	                   [1;32m^[m
[1mbad/incr_arr_length.lat:4:2: [1;34mnote: [0;1mexpression starts here[m
	(new int[3]).length++;
	[1;32m^[m
